# mallard

./: .gitignore  README.md  Vagrantfile  mallard.cabal  stack.yaml
app/: Config.hs  Mallard.hs
docker/images/mallard-deb/: Dockerfile
docker/scripts/: build-deb  extract-deb
lib/Database/: Mallard.hs
lib/Database/Mallard/: File.hs  Graph.hs  Parser.hs  Postgre.hs  Types.hs  Validation.hs
lib/Database/Mallard/Commands/: ConfirmChecksums.hs  Migrate.hs  RepairChecksum.hs
scripts/: deb-package.sh
sql/example-contacts/: schema.sql
sql/example-contacts/tables/: person.sql  phone.sql
sql/example-contacts/tests/: sample-person.sql
sql/mallard/: 0000-setup.sql  0001-applied-migrations.sql
sql/migrator/: 0000-setup.sql  0001-applied-migrations.sql
test/: Test.hs
test/Test/: Integration.hs
vagrant/: provision.sh
