name:               mallard
version:            0.6.2.0
synopsis:           Database migration and testing as a library.
description:        Please see README.md
homepage:           https://github.com/AndrewRademacher/mallard
license:            MIT
license-file:       LICENSE
author:             Andrew Rademacher
maintainer:         andrewrademacher@icloud.com
copyright:          2017 Andrew Rademacher <andrewrademacher@icloud.com>
category:           Database
build-type:         Simple
cabal-version:      >=1.10

extra-source-files:
    README.md
    sql/mallard/*.sql

library
    hs-source-dirs:    lib
    default-language:  Haskell2010

    ghc-options:       -Wall -Wno-unused-do-bind

    exposed-modules:   Database.Mallard.Commands.Migrate
                       Database.Mallard.File
                       Database.Mallard.Graph
                       Database.Mallard.Parser
                       Database.Mallard.Postgre
                       Database.Mallard.Types
                       Database.Mallard.Validation
                       Database.Mallard

    build-depends:     base     >= 4 && < 5

                     , byteable
                     , bytestring
                     , cryptohash
                     , exceptions
                     , fgl
                     , file-embed
                     , hashable
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , Interpolation
                     , lens
                     , megaparsec   >= 6 && < 7
                     , mtl
                     , path
                     , path-io
                     , text
                     , unordered-containers

executable mallard
    main-is:            Mallard.hs
    hs-source-dirs:     app
    default-language:   Haskell2010

    ghc-options:        -Wall

    other-modules:      Config

    build-depends:      base    >= 4 && < 5

                      , mallard

                      , exceptions
                      , fgl
                      , hasql
                      , hasql-optparse-applicative
                      , hasql-pool
                      , lens
                      , mtl
                      , optparse-applicative
                      , optparse-text
                      , path
                      , path-io
                      , text
                      , unordered-containers

test-suite test-mallard
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    ghc-options:        -Wall

    other-modules:      Test.Integration

    build-depends:      base            ==4.*

                      , mallard

                      , contravariant
                      , hasql
                      , hasql-pool
                      , path
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , turtle